Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \input{preamble}
 
 \title{
-  Wave Bitches
+   Manolo
 }
 \author{
   Aleix Boné\\
@@ -29,7 +29,7 @@
 
 \section{Resultados}%
 \label{sec:resultados}
-% Descriptiva más inferéncia
+% Descriptiva más inferencia
 
 \section{Discusión}%
 \label{sec:discusión}
