--- a/preamble.tex
+++ b/preamble.tex
@@ -107,6 +107,23 @@
 
 %\lstset{style=mystyle}
 
+\definecolor{codegreen}{rgb}{0,0.6,0} \definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{ backgroundcolor=\color{backcolour},
+    commentstyle=\color{codegreen}, keywordstyle=\color{blue},
+    numberstyle=\tiny\color{codegray}, stringstyle=\color{red},
+    identifierstyle=\color{black}, basicstyle=\footnotesize,
+    %breakatwhitespace=false,
+    breaklines=true,
+    %captionpos=b,                    keepspaces=true,
+    numbers=left,                    numbersep=5pt,
+    showspaces=false,
+    %showstringspaces=false, showtabs=false,
+    tabsize=4 }
+    
+\lstset{style=mystyle}
 
 %%\renewcommand{\figurename}{Fig.} \renewcommand{\tablename}{Tabla}
 %%tabla-es in babel better
