Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -28,9 +28,11 @@
 \section{Introducción}%
 \label{sec:introduccion}
 % Justificación + objetivos
-El gran interés de uno de los integrantes del grupo, Alex Herrero, en el mundo del surf nos ha llevado a investigar este apasionante tema. Es un tema complicado dado que los datos Dentro del ámbito del surf hay muchos factores a tener en cuenta en cuanto a lo que se refiere a la ``ola perfecta''. Entre ellos, dos de los más importantes son el tamaño de la ola y la velocidad del viento.
+El gran interés de uno de los integrantes del grupo, Alex Herrero, en el mundo del surf nos ha llevado a investigar este apasionante tema y nos ha introducido al resto del grupo al mundo del surf y la oceanografía. Dentro del ámbito del surf hay muchos factores a tener en cuenta en cuanto a lo que se refiere a la ``ola perfecta''. Entre ellos, dos de los más importantes son el tamaño de la ola y la velocidad del viento. Es un tema complejo dado que los datos que vamos a estudiar se ven afectados por muchos otros factores; la marea, el \textit{fetch}\footnote{La longitud rectilínea máxima de una gran masa de agua superficial que es uniformemente afectada por la dirección y fuerza del viento} o la complexión del fondo marino litoral.
 
-En este caso queremos comparar dos de los \textit{surf spots}\footnote{Lugar con olas surfeables} con las olas más grandes del mundo a lo largo de la historia; Nazaré en Portugal y Jaws en Peahi, Hawái. Paralelamente observaremos qué relación tiene la velocidad de viento con el tamaño de las olas en ambos sitios.
+En este caso queremos comparar dos de los \textit{surf spots}\footnote{Lugar con olas surfeables} más famosos y con las olas más grandes del mundo a lo largo de la historia; Nazaré en Portugal y Jaws en Peahi, Hawái. Paralelamente observaremos qué relación tiene la velocidad de viento con el tamaño de las olas en ambos sitios.
+
+Nuestra hipótesis es que 
 
 \section{Recogida de datos}%
 \label{sec:recogida_de_datos}
@@ -46,11 +48,11 @@ olas y viento en periodos de 3 horas de 2006 hasta hoy. En el caso de Nazaré
 obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 (26704 periodos de 3 horas).
 
-\section{Métodos}%
+\section{Análisis Descriptivo}%
 \label{sec:metodos}
 % Métodos (unidades, variables, análisis)
 
-\section{Resultados}%
+\section{Análisis Inferencial}%
 \label{sec:resultados}
 % Descriptiva más inferencia
 
