Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@ El gran interés de uno de los integrantes del grupo, Alex Herrero, en el mundo 
 
 En este caso queremos comparar dos de los \textit{surf spots}\footnote{Lugar con olas surfeables} más famosos y con las olas más grandes del mundo a lo largo de la historia; Nazaré en Portugal y Jaws en Peahi, Hawái. Paralelamente observaremos qué relación tiene la velocidad de viento con el tamaño de las olas en ambos sitios.
 
-Nuestra hipótesis es que 
+Nuestra hipótesis es que la correlación entre el viento y la altura de las olas será positiva 
 
 \section{Recogida de datos}%
 \label{sec:recogida_de_datos}
@@ -51,6 +51,9 @@ obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 \section{Análisis Descriptivo}%
 \label{sec:metodos}
 % Métodos (unidades, variables, análisis)
+
+\input{tables/summary_nazare.tex}
+\input{tables/summary_jaws.tex}
 
 \section{Análisis Inferencial}%
 \label{sec:resultados}
