--- a/notebookR.ipynb
+++ b/notebookR.ipynb
@@ -22,12 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      Wave             Wind       \n",
+       " Min.   : 0.000   Min.   : 0.000  \n",
+       " 1st Qu.: 1.600   1st Qu.: 5.000  \n",
+       " Median : 2.100   Median : 8.000  \n",
+       " Mean   : 2.414   Mean   : 8.642  \n",
+       " 3rd Qu.: 3.000   3rd Qu.:11.000  \n",
+       " Max.   :11.400   Max.   :38.000  \n",
+       " NA's   :544      NA's   :20      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(nazare[,2:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(xtable(summary(nazare)), file = \"tables/summary_nazare.tex\", compress = FALSE)\n",
-    "print(xtable(summary(jaws)), file = \"tables/summary_jaws.tex\", compress = FALSE)"
+    "print(xtable(summary(nazare[,2:3])), file = \"tables/summary_nazare.tex\", compress = FALSE,floating=FALSE,latex.environments=NULL,booktabs=TRUE)\n",
+    "print(xtable(summary(jaws[,2:3])), file = \"tables/summary_jaws.tex\", compress = FALSE,floating=FALSE,latex.environments=NULL,booktabs=TRUE)"
    ]
   },
   {
