--- a/tables/summary_nazare.tex
+++ b/tables/summary_nazare.tex
@@ -1,18 +1,15 @@
 % latex table generated in R 3.5.1 by xtable 1.8-3 package
-% Tue Dec 18 13:21:53 2018
-\begin{table}[ht]
-\centering
-\begin{tabular}{rlll}
-  \hline
- &                  Time &      Wave &      Wind \\ 
-  \hline
-X & 2006-12-23 14:00:00:    1   & Min.   : 0.000   & Min.   : 0.000   \\ 
-  X.1 & 2006-12-23 17:00:00:    1   & 1st Qu.: 1.600   & 1st Qu.: 5.000   \\ 
-  X.2 & 2006-12-23 20:00:00:    1   & Median : 2.100   & Median : 8.000   \\ 
-  X.3 & 2006-12-23 23:00:00:    1   & Mean   : 2.414   & Mean   : 8.642   \\ 
-  X.4 & 2006-12-24 02:00:00:    1   & 3rd Qu.: 3.000   & 3rd Qu.:11.000   \\ 
-  X.5 & 2006-12-24 05:00:00:    1   & Max.   :11.400   & Max.   :38.000   \\ 
-  X.6 & (Other)            :34994   & NA's   :544   & NA's   :20   \\ 
-   \hline
+% Tue Dec 18 13:34:46 2018
+\begin{tabular}{rll}
+  \toprule
+ &      Wave &      Wind \\ 
+  \midrule
+X & Min.   : 0.000   & Min.   : 0.000   \\ 
+  X.1 & 1st Qu.: 1.600   & 1st Qu.: 5.000   \\ 
+  X.2 & Median : 2.100   & Median : 8.000   \\ 
+  X.3 & Mean   : 2.414   & Mean   : 8.642   \\ 
+  X.4 & 3rd Qu.: 3.000   & 3rd Qu.:11.000   \\ 
+  X.5 & Max.   :11.400   & Max.   :38.000   \\ 
+  X.6 & NA's   :544   & NA's   :20   \\ 
+   \bottomrule
 \end{tabular}
-\end{table}
