Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -27,16 +27,17 @@
 
 \section{Introducción}%
 \label{sec:introduccion}
-% Justificación + objetivos
+% Justificación + objetivos + hipotesis
 El gran interés de uno de los integrantes del grupo, Alex Herrero, en el mundo del surf nos ha llevado a investigar este apasionante tema y nos ha introducido al resto del grupo al mundo del surf y la oceanografía. Dentro del ámbito del surf hay muchos factores a tener en cuenta en cuanto a lo que se refiere a la ``ola perfecta''. Entre ellos, dos de los más importantes son el tamaño de la ola y la velocidad del viento. Es un tema complejo dado que los datos que vamos a estudiar se ven afectados por muchos otros factores; la marea, el \textit{fetch}\footnote{La longitud rectilínea máxima de una gran masa de agua superficial que es uniformemente afectada por la dirección y fuerza del viento} o la complexión del fondo marino litoral.
 
 En este caso queremos comparar dos de los \textit{surf spots}\footnote{Lugar con olas surfeables} más famosos y con las olas más grandes del mundo a lo largo de la historia; Nazaré en Portugal y Jaws en Peahi, Hawái. Paralelamente observaremos qué relación tiene la velocidad de viento con el tamaño de las olas en ambos sitios.
 
-Nuestra hipótesis es que la correlación entre el viento y la altura de las olas será positiva 
+Nuestra hipótesis es que la media de la altura de las olas en Nazaré será superior a la de Jaws, dado que en los últimos años el récord de ola más grandes surfeada por el hombre se ha roto en Nazaré varias veces. Además, el fondo marino de Nazaré tiene un relieve mejor para la creación de olas gigantes. En cuanto a la relación entre la velocidad del viento y la altura de las olas, esperamos que la correlación sea positiva
+puesto que la velocidad del viento es uno de los factores más importantes en la creación de las olas.
 
 \section{Recogida de datos}%
 \label{sec:recogida_de_datos}
-
+% Recogida de datos + seleccion de datos
 Para realizar nuestro análisis recogimos datos de viento y altura de olas de
 dos localizaciones distintas. Escogimos dos playas conocidas por sus buenas
 olas para hacer surf: Nazaré, Portugal y Jaws en Peahi, Hawái.
@@ -52,8 +53,17 @@ obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 \label{sec:metodos}
 % Métodos (unidades, variables, análisis)
 
+\begin{table}[htbp]
+\caption{summary Nazaré}
+\centering
 \input{tables/summary_nazare.tex}
+\end{table}
+
+\begin{table}[htbp]
+\caption{summary Jaws}
+\centering
 \input{tables/summary_jaws.tex}
+\end{table}
 
 \section{Análisis Inferencial}%
 \label{sec:resultados}
