Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -74,14 +74,14 @@ obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 \begin{figure}[!ht]
 \label{fig:wind_waves_jaws}
 \centering
-\includegraphics[width=0.6\textwidth]{./figures/jaws.pdf}
+\includegraphics[width=0.6\textwidth]{./figures/jaws_bin2d.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
 \end{figure}
 
 \begin{figure}[!ht]
 \label{fig:wind_waves_nazare}
 \centering
-\includegraphics[width=0.6\textwidth]{./figures/nazare.pdf}
+\includegraphics[width=0.6\textwidth]{./figures/nazare_bin2d.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
 \end{figure}
 
