--- a/main.tex
+++ b/main.tex
@@ -48,21 +48,25 @@ Python\footnote{El código se puede ver en el anexo
 olas y viento en periodos de 3 horas de 2006 hasta hoy. En el caso de Nazaré
 obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 (26704 periodos de 3 horas).
+Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidido considerar solo los datos de entre las 8:00 am
+
+% subset
+% sample_n()
 
 \section{Análisis Descriptivo}%
 \label{sec:metodos}
 % Métodos (unidades, variables, análisis)
 
 \begin{table}[htbp]
-\caption{summary Nazaré}
 \centering
 \input{tables/summary_nazare.tex}
+\caption{summary Nazaré}
 \end{table}
 
 \begin{table}[htbp]
-\caption{summary Jaws}
 \centering
 \input{tables/summary_jaws.tex}
+\caption{summary Jaws}
 \end{table}
 
 \section{Análisis Inferencial}%
