Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@ Python\footnote{El código se puede ver en el anexo
 olas y viento en periodos de 3 horas de 2006 hasta hoy. En el caso de Nazaré
 obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 (26704 periodos de 3 horas).
-Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidido considerar solo los datos de entre las 8:00 am
+Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidido considerar solo los datos de entre las 8:00 y las 17:00 ya que es el 
 
 % subset
 % sample_n()
@@ -59,13 +59,13 @@ Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidi
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_nazare.tex}
+\input{tables/summary_nazare500.tex}
 \caption{summary Nazaré}
 \end{table}
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_jaws.tex}
+\input{tables/summary_jaws500.tex}
 \caption{summary Jaws}
 \end{table}
 
