--- a/main.tex
+++ b/main.tex
@@ -42,38 +42,60 @@ Para realizar nuestro análisis recogimos datos de viento y altura de olas de
 dos localizaciones distintas. Escogimos dos playas conocidas por sus buenas
 olas para hacer surf: Nazaré, Portugal y Jaws en Peahi, Hawái.
 
-Pudimos obtener datos de oleaje y viento del archivo histórico de \emph{WindGuru}\footnote{\url{https://www.windguru.cz/archive.php}}, un servicio especilizado en previsiones del tiempo para windsurfistas y kitesurfistas basado en el modelo numérico GFS\footnote{\url{https://es.wikipedia.org/wiki/Global_Forecast_System}}. Con un script de
+Pudimos obtener datos de oleaje y viento del archivo histórico de \emph{WindGuru}\footnote{\url{https://www.windguru.cz/archive.php}}, un servicio especializado en previsiones del tiempo para windsurfistas y kitesurfistas basado en el modelo numérico GFS\footnote{\url{https://es.wikipedia.org/wiki/Global_Forecast_System}}. Con un \textit{script} de
 Python\footnote{El código se puede ver en el anexo
   \ref{sec:codigo_extraccion_de_datos}} extrajimos datos de la altura de las
 olas y viento en periodos de 3 horas de 2006 hasta hoy. En el caso de Nazaré
 obtuvimos datos de 4377 días (35016 periodos de 3 horas) y en Jaws 3338 días
 (26704 periodos de 3 horas).
-Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidido considerar solo los datos de entre las 8:00 y las 17:00 ya que es el 
 
-% subset
-% sample_n()
+Con el fin de simplificar los cálculos al hacer la prueba de hipótesis y la regresión lineal simple nos interesa reducir la cantidad de datos que utilizamos en nuestro estudio. Para ello, hemos decidido considerar solo los datos de entre las 8:00 y las 17:00 usando la función \texttt{subset} de R, debido a que la gran mayoría de surfistas practican el surf en esta franja horaria. Asimismo, hemos usado la función \texttt{sample\_n} de la librería \texttt{dplyr} de R para reducir aleatoriamente aún más los datos de cada \textit{surf spot} hasta los 500 \textit{data points}. Usando estos criterios, hemos reducido la cantidad de datos para Nazaré y Jaws desde los 35016 y 26704 periodos respectivamente hasta los 500 para cada uno.
 
 \section{Análisis Descriptivo}%
 \label{sec:metodos}
-% Métodos (unidades, variables, análisis)
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_nazare500.tex}
+\input{tables/summary_nazare.tex}
 \caption{summary Nazaré}
+\label{tab:summary_nazare}
 \end{table}
+
+El Cuadro \ref{tab:summary_nazare} muestra un resumen de los datos recogidos sobre Nazaré. Cómo se puede observar el tamaño máximo registrado es de 11.4 metros, a pesar de ello la media es de 2.4 metros debido a que durante la mayoría de días la altura está cerca del mínimo (0 metros). Por este mismo motivo la mediana (de 2.1 metros) se encuentra por debajo de la media, y el primer y tercer cuartiles son 2.1 y 3 metros respectivamente.
+Con respecto a los datos sobre la velocidad del viento sucede algo parecido, pero en este caso los datos de concentran sobre todo entre la mediana (8 nudos) y el tercer cuartil (11 nudos) ya que la media es de 8.6 nudos. Sin embargo el valor máximo se aleja mucho de la media llegando a multiplicar su valor por más de cuatro siendo este de 38 nudos.
+
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_jaws500.tex}
+\input{tables/summary_jaws.tex}
 \caption{summary Jaws}
+\label{tab:summary_jaws}
 \end{table}
+
+En el caso de Jaws, la altura de las olas se distribuye de forma mas simétrica ya que 
+
+\begin{figure}[!ht]
+\begin{subfigure}{.49\textwidth}
+\label{fig:boxplot_wind}
+\centering
+\includegraphics[width=0.9\textwidth]{./figures/boxplot_wind.pdf}
+  \caption{Boxplot Viento}
+\end{subfigure}%
+\begin{subfigure}{.49\textwidth}
+\label{fig:boxplot_wave}
+\centering
+\includegraphics[width=0.9\textwidth]{./figures/boxplot_wave.pdf}
+  \caption{Boxplot Olas}
+\end{subfigure}
+\caption{Boxplots}
+\end{figure}
 
 \section{Análisis Inferencial}%
 \label{sec:resultados}
 % Descriptiva más inferencia
 
-
+\section{Análisis de Regresión Lineal Simple}
+\label{sec:rls}
 
 \begin{figure}[!ht]
 \label{fig:wind_waves_jaws}
@@ -89,11 +111,8 @@ Para reducir la cantidad de datos que utilizamos en nuestro estudio hemos decidi
   \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
 \end{figure}
 
-
-
 \section{Discusión}%
 \label{sec:discusión}
-
 
 \pagebreak
 \appendix
