Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -56,23 +56,22 @@ Con el fin de simplificar los cálculos al hacer la prueba de hipótesis y la re
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_nazare.tex}
+\input{tables/summary_nazare2.tex}
 \caption{summary Nazaré}
 \label{tab:summary_nazare}
 \end{table}
 
-El Cuadro \ref{tab:summary_nazare} muestra un resumen de los datos recogidos sobre Nazaré. Cómo se puede observar el tamaño máximo registrado es de 11.4 metros, a pesar de ello la media es de 2.4 metros debido a que durante la mayoría de días la altura está cerca del mínimo (0 metros). Por este mismo motivo la mediana (de 2.1 metros) se encuentra por debajo de la media, y el primer y tercer cuartiles son 2.1 y 3 metros respectivamente.
-Con respecto a los datos sobre la velocidad del viento sucede algo parecido, pero en este caso los datos de concentran sobre todo entre la mediana (8 nudos) y el tercer cuartil (11 nudos) ya que la media es de 8.6 nudos. Sin embargo el valor máximo se aleja mucho de la media llegando a multiplicar su valor por más de cuatro siendo este de 38 nudos.
-
+El Cuadro \ref{tab:summary_nazare} muestra un resumen de los datos recogidos sobre Nazaré. Cómo se puede observar la altura máxima registrada es de 11.4 metros, a pesar de ello la media es de 2.4 metros debido a que durante la mayoría de días la altura está cerca del mínimo (0 metros). Por este mismo motivo la mediana (de 2.1 metros) se encuentra por debajo de la media, y el primer y tercer cuartiles son 2.1 y 3 metros respectivamente.
+Con respecto a los datos sobre la velocidad del viento sucede algo parecido, pero en este caso los datos de concentran sobre todo entre la mediana (8 nudos) y el tercer cuartil (11 nudos) ya que la media es de 8.6 nudos. Sin embargo el valor máximo se aleja mucho de la media llegando a multiplicar su valor por más de cuatro siendo este de 38 nudos. También se puede observar que el mínimo, al igual que con la altura es de 0 nudos.
 
 \begin{table}[htbp]
 \centering
-\input{tables/summary_jaws.tex}
+\input{tables/summary_jaws2.tex}
 \caption{summary Jaws}
 \label{tab:summary_jaws}
 \end{table}
 
-En el caso de Jaws, la altura de las olas se distribuye de forma mas simétrica ya que 
+En el caso de Jaws, la altura de las olas se distribuye de forma más simétrica ya que 
 
 \begin{figure}[!ht]
 \begin{subfigure}{.49\textwidth}
