--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \input{preamble}
 
-%\geometry{margin=1in}
+\geometry{margin=1in}
 
 \title{
    Probabilidad y estadística - B7 \\
@@ -61,8 +61,15 @@ Con el fin de simplificar los cálculos al hacer la prueba de hipótesis y la re
 \label{tab:summary_nazare}
 \end{table}
 
-El Cuadro \ref{tab:summary_nazare} muestra un resumen de los datos recogidos sobre Nazaré. Cómo se puede observar la altura máxima registrada es de 11.4 metros, a pesar de ello la media es de 2.4 metros debido a que durante la mayoría de días la altura está cerca del mínimo (0 metros). Por este mismo motivo la mediana (de 2.1 metros) se encuentra por debajo de la media, y el primer y tercer cuartiles son 2.1 y 3 metros respectivamente.
-Con respecto a los datos sobre la velocidad del viento sucede algo parecido, pero en este caso los datos de concentran sobre todo entre la mediana (8 nudos) y el tercer cuartil (11 nudos) ya que la media es de 8.6 nudos. Sin embargo el valor máximo se aleja mucho de la media llegando a multiplicar su valor por más de cuatro siendo este de 38 nudos. También se puede observar que el mínimo, al igual que con la altura es de 0 nudos.
+El Cuadro \ref{tab:summary_nazare} muestra un resumen de los datos recogidos sobre Nazaré. Cómo se puede observar la altura máxima registrada es de 11.4 metros, a pesar de ello la media es de 2.4 metros debido a que durante la mayoría de días la altura está cerca del mínimo (0 metros). Por este mismo motivo la mediana (de 2.1 metros) se encuentra por debajo de la media, y el primer y tercer cuartiles son de 1.6 y 3 metros respectivamente. Dicha distribución se puede ver con claridad en la Figura \ref{fig:hist_waves_nazare}.
+
+\begin{figure}[H]
+\centering
+\includegraphics[height=5.6cm]{./figures/nazare_hist_wave.pdf}
+  \caption{Histograma de olas en Nazaré}
+  \label{fig:hist_waves_nazare}
+\end{figure}
+Con respecto a los datos sobre la velocidad del viento sucede algo parecido, pero en este caso los datos se concentran sobre todo entre la mediana (8 nudos) y el tercer cuartil (11 nudos) ya que la media es de 8.6 nudos. Sin embargo el valor máximo se aleja mucho de la media llegando a multiplicar su valor por más de cuatro siendo este de 38 nudos. También se puede observar que el mínimo, al igual que con la altura es de 0 nudos.
 
 \begin{table}[htbp]
 \centering
@@ -71,9 +78,19 @@ Con respecto a los datos sobre la velocidad del viento sucede algo parecido, per
 \label{tab:summary_jaws}
 \end{table}
 
-En el caso de Jaws, la altura de las olas se distribuye de forma más simétrica ya que 
 
-\begin{figure}[!ht]
+En el caso de Jaws, los datos se exponen en el Cuadro \ref{tab:summary_jaws}, y se observa que la distribución de la altura es bastante similar a la de Nazaré pero los datos están levemente más centrados (véase Figura \ref{fig:hist_waves_jaws}). En Jaws el rango de altura es menor ya que el valor mínimo sigue siendo de 0 metros pero el máximo en cambio es de 5.9, casi la mitad que en Nazaré. La media y la mediana prácticamente coinciden siendo 2 y 1.9 metros respectivamente. El primer cuartil se encuentra en 1.6 metros y el tercero en 2.4 metros.
+
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.6\textwidth]{./figures/jaws_hist_wave.pdf}
+  \caption{Histograma de olas en Jaws}
+  \label{fig:hist_waves_jaws}
+\end{figure}
+
+\begin{figure}[H]
 \begin{subfigure}{.49\textwidth}
 \label{fig:boxplot_wind}
 \centering
@@ -96,17 +113,33 @@ En el caso de Jaws, la altura de las olas se distribuye de forma más simétrica
 \section{Análisis de Regresión Lineal Simple}
 \label{sec:rls}
 
-\begin{figure}[!ht]
+
+
+\begin{figure}[H]
 \label{fig:wind_waves_jaws}
 \centering
 \includegraphics[width=0.6\textwidth]{./figures/jaws_bin2d.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
 \end{figure}
 
-\begin{figure}[!ht]
+\begin{figure}[H]
+\label{fig:jaws_smooth}
+\centering
+\includegraphics[width=0.6\textwidth]{./figures/jaws_smooth.pdf}
+  \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
+\end{figure}
+
+\begin{figure}[H]
 \label{fig:wind_waves_nazare}
 \centering
 \includegraphics[width=0.6\textwidth]{./figures/nazare_bin2d.pdf}
+  \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
+\end{figure}
+
+\begin{figure}[H]
+\label{fig:nazare_smooth}
+\centering
+\includegraphics[width=0.6\textwidth]{./figures/nazare_smooth.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
 \end{figure}
 
@@ -120,7 +153,6 @@ En el caso de Jaws, la altura de las olas se distribuye de forma más simétrica
 \label{sec:codigo_extraccion_de_datos}
 
 \lstinputlisting[language=Python]{./process.py}
-
 \end{document}
 
 % vim:sw=2:ts=2:et:spell:spelllang=es:
