Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -119,34 +119,47 @@ En la Figura \ref{fig:boxplot_wind} podemos ver claramente como la media de la v
 \label{sec:rls}
 
 
-
 \begin{figure}[H]
-\label{fig:wind_waves_jaws}
+\label{fig:wind_waves_jaws_all}
 \centering
-\includegraphics[width=0.6\textwidth]{./figures/jaws_bin2d.pdf}
+\includegraphics{./figures/jaws_all.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
 \end{figure}
 
 \begin{figure}[H]
-\label{fig:jaws_smooth}
+\label{fig:wind_waves_jaws_all}
 \centering
-\includegraphics[width=0.6\textwidth]{./figures/jaws_smooth.pdf}
-  \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
-\end{figure}
-
-\begin{figure}[H]
-\label{fig:wind_waves_nazare}
-\centering
-\includegraphics[width=0.6\textwidth]{./figures/nazare_bin2d.pdf}
+\includegraphics{./figures/nazare_all.pdf}
   \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
 \end{figure}
 
-\begin{figure}[H]
-\label{fig:nazare_smooth}
-\centering
-\includegraphics[width=0.6\textwidth]{./figures/nazare_smooth.pdf}
-  \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
-\end{figure}
+%\begin{figure}[H]
+%\label{fig:wind_waves_jaws}
+%\centering
+%\includegraphics[width=0.6\textwidth]{./figures/jaws_bin2d.pdf}
+%  \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
+%\end{figure}
+%
+%\begin{figure}[H]
+%\label{fig:jaws_smooth}
+%\centering
+%\includegraphics[width=0.6\textwidth]{./figures/jaws_smooth.pdf}
+%  \caption{Velocidad de viento vs. Altura de olas en Jaws en Peahi, Hawái}
+%\end{figure}
+%
+%\begin{figure}[H]
+%\label{fig:wind_waves_nazare}
+%\centering
+%\includegraphics[width=0.6\textwidth]{./figures/nazare_bin2d.pdf}
+%  \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
+%\end{figure}
+%
+%\begin{figure}[H]
+%\label{fig:nazare_smooth}
+%\centering
+%\includegraphics[width=0.6\textwidth]{./figures/nazare_smooth.pdf}
+%  \caption{Velocidad de viento vs. Altura de olas en Nazaré, Portugal}
+%\end{figure}
 
 \section{Discusión}%
 \label{sec:discusión}
